--- a/style/style.css
+++ b/style/style.css
@@ -334,7 +334,7 @@ section#education div:first-of-type div.img {
 }
 
 section#education div:last-of-type > a div.img {
-  background-image: url(../images/logo_it_step.jpg);
+  background-image: url(../images/logo-it-step.jpg);
   height: 3.5rem;
 }
 
